# nonos-kernel

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  boot.asm  boot_test.asm  browser-implementation-plan.md  browser-issues.md  build.rs  cargo.toml  clippy.toml  deny.toml  lib.rs  linker.ld  linker_aarch64.ld  linker_riscv64.ld  multiboot.ld  root-ca-expansion-plan.md  rust-toolchain.toml  rustc-ice-2026-05-15T10_55_04-43970.txt  rustfmt.toml  x86_64-nonos.json
nonos-bootloader/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
nonos-bootloader/.cargo/: config.toml
nonos-bootloader/.github/workflows/: build.yml
nonos-bootloader/faq/: BUILD.md  CEREMONY.md  FAQ.md  README.md  SECURITY.md  TECHNICAL.md
nonos-bootloader/firmware/amd/: LICENSE
nonos-bootloader/firmware/asus/: LICENSE
nonos-bootloader/firmware/atheros/: LICENSE
nonos-bootloader/firmware/broadcom/: LICENSE
nonos-bootloader/firmware/broadcom-ethernet/: LICENSE
nonos-bootloader/firmware/chelsio/: LICENSE
nonos-bootloader/firmware/creative/: LICENSE
nonos-bootloader/firmware/cypress/: LICENSE
nonos-bootloader/firmware/dell/: LICENSE
nonos-bootloader/firmware/hp/: LICENSE
nonos-bootloader/firmware/lenovo/: LICENSE
nonos-bootloader/firmware/marvell/: LICENSE
nonos-bootloader/firmware/mediatek/: LICENSE
nonos-bootloader/firmware/mellanox/: LICENSE
nonos-bootloader/firmware/micron/: LICENSE
nonos-bootloader/firmware/nvidia/: LICENSE
nonos-bootloader/firmware/qualcomm/: LICENSE
nonos-bootloader/firmware/ralink/: LICENSE
nonos-bootloader/firmware/realtek/: LICENSE
nonos-bootloader/firmware/samsung/: LICENSE
nonos-bootloader/firmware/seagate/: LICENSE
nonos-bootloader/firmware/supermicro/: LICENSE
nonos-bootloader/firmware/tp-link/: LICENSE
nonos-bootloader/firmware/via/: LICENSE
nonos-bootloader/firmware/vmware/: LICENSE
nonos-bootloader/firmware/western-digital/: LICENSE
nonos-bootloader/src/: lib.rs  main.rs  network.rs
nonos-bootloader/src/arch/: mod.rs
nonos-bootloader/src/boot/: attestation.rs  crypto.rs  elf.rs  hardware.rs  kernel.rs  memtest.rs  mod.rs  prepare.rs  security.rs  shell.rs  uefi.rs  util.rs
nonos-bootloader/src/config/: apply.rs  apply_policy.rs  boot_method.rs  config.rs  display.rs  enums.rs  fallback.rs  graphics_mode.rs  memory_mode.rs  mod.rs  network_policy.rs  nvram.rs  policy_network.rs  policy_security.rs  policy_system.rs  security_policy.rs  types.rs  verification_level.rs
nonos-bootloader/src/crypto/: keys.rs  keystore_v2.rs  mod.rs  sig.rs  verifier.rs  verify.rs  verify_sig.rs  verify_types.rs
nonos-bootloader/src/display/: background.rs  boot_screen.rs  constants.rs  font.rs  gop.rs  log_panel.rs  mod.rs  security.rs  ui.rs
nonos-bootloader/src/entropy/: collector.rs  core.rs  getrandom.rs  mod.rs  rdrand.rs  sources.rs  standalone.rs  types.rs  util.rs  wipe.rs
nonos-bootloader/src/entry/: action.rs  boot.rs  dev.rs  init.rs  mod.rs  mode.rs  pipeline.rs
nonos-bootloader/src/firmware/: loader.rs  mod.rs  types.rs
nonos-bootloader/src/handoff/: CONTRIBUTING.md  bootinfo.rs  config.rs  exit.rs  jump.rs  mod.rs  prepare.rs  timing.rs  types.rs
nonos-bootloader/src/hardware/: acpi.rs  cpu.rs  devices.rs  discover.rs  display.rs  memory.rs  mod.rs  tpm.rs  types.rs
nonos-bootloader/src/image_format/: footer.rs  mod.rs  types.rs
nonos-bootloader/src/kernel_verify/: delay.rs  display.rs  display_status.rs  elf.rs  hash.rs  helpers.rs  key.rs  mod.rs  signature.rs  size.rs  types.rs  verify.rs  verify_error.rs
nonos-bootloader/src/loader/: CONTRIBUTING.md  mod.rs
nonos-bootloader/src/log/: init.rs  logger.rs  mod.rs  output.rs
nonos-bootloader/src/menu/: brand.rs  dev_check.rs  mod.rs  run.rs
nonos-bootloader/src/paging/: build.rs  constants.rs  frame.rs  map_directmap.rs  map_identity.rs  map_kernel_text.rs  (+6 more)
nonos-broker-msix-tests/: Cargo.toml
nonos-broker-msix-tests/src/: lib.rs
tools/: Cargo.toml  build.rs
tools/browser_nav_test/: Cargo.toml
tools/ci/: build-market-fixtures.sh  marketplace_index_smoke.sh  run-static-checks.sh  scan-binary-hygiene.sh  scan-microkernel-symbols.sh  setup-signing-key.sh
tools/generated_store/: amazon.rs  digicert.rs  entrust.rs  google.rs
tools/src/: keygen.rs
userland/app_skeleton/: Cargo.toml
userland/capsule_about/: Capsule.mk  Cargo.toml  README.md
userland/capsule_calculator/: Capsule.mk  Cargo.toml  README.md
userland/capsule_crypto/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_ahci/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_e1000/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_hda/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_i2c_hid/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_i2c_pci/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_iwlwifi/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_nvme/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_ps2_input/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_rtl8139/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_usb_hid/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_usb_msc/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_virtio_blk/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_virtio_gpu/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_virtio_net/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_virtio_rng/: Capsule.mk  Cargo.toml  README.md
userland/capsule_driver_xhci/: Capsule.mk  Cargo.toml  README.md
userland/capsule_entropy/: Capsule.mk  Cargo.toml  README.md
userland/capsule_file_manager/: Capsule.mk  Cargo.toml  README.md
userland/capsule_input_router/: Capsule.mk  Cargo.toml  README.md
userland/capsule_market/: Capsule.mk  Cargo.toml  README.md
userland/capsule_net_dhcp/: Capsule.mk  Cargo.toml  README.md
userland/capsule_net_dns/: Capsule.mk  Cargo.toml  README.md
(+12778 files in other folders)
